--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -1,159 +1,9 @@
+{% extends 'homepage.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Site Title -->
-        <title>Home Three</title>
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="{% static 'img/favicon.png' %}" >
-		<!-- Bootstrap v5.0.2 css -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-        <!-- Animate css -->
-		<link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
-		<!--====== Fontawesome ======-->
-        <link rel="stylesheet" href="{% static 'fonts/fontawesome/css/fontawesome.all.min.css' %}">
-		<!-- Owl carousel css -->
-		<link rel="stylesheet" href="{% static 'css/owl-carousel.min.css' %}">
-		<!-- Meanmenu css -->
-		<link rel="stylesheet" href="{% static 'css/meanmenu.min.css' %}">
-		<!-- cssanimation css -->
-		<link rel="stylesheet" href="{% static 'css/cssanimation.min.css' %}">
-		<!-- Default css -->
-		<link rel="stylesheet" href="{% static 'css/default.css' %}">
-		<!-- Style CSS -->
-		<link rel="stylesheet" href="{% static 'css/style.css' %}">
-		<!-- Responsive CSS -->
-        <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-</head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <!-- Start Preloader -->
-		<div class="preloader-wrap">
-			<div class="cube-wrapper">
-				<div class="cube-folding">
-					<span class="leaf1"></span>
-					<span class="leaf2"></span>
-					<span class="leaf3"></span>
-					<span class="leaf4"></span>
-				</div>
-				<span class="loading" data-name="Loading">Loading</span>
-			</div>
-		</div>
-		<!-- End Preloader -->
-		<!-- Start Wrapper -->
-		<div class="wrapper">
-			<!-- Start Header -->
-			<header id="header" class="header-area style-2 absulate-header">
-				<div class="container">
-					<!-- Start header top -->
-					<div class="row">
-						<div class="col-lg-6 col-sm-4">
-							<div class="header-top-left">
-								<ul>
-									<li class="has-dropdown"><a href="#">USD</a>
-										<ul>
-											<li><a href="#">URO</a></li>
-											<li><a href="#">FJD</a></li>
-											<li><a href="#">GBP</a></li>
-										</ul>
-									</li>
-									<li class="has-dropdown"><a href="#">English</a>
-										<ul>
-											<li><a href="#">Arabic</a></li>
-											<li><a href="#">French</a></li>
-											<li><a href="#">Bangla</a></li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-8">
-							<!-- Header top contact -->
-							<div class="header-top-contact">
-								<ul>
-									<li><a href="mailto:yourname@email.com"><i class="fal fa-envelope"></i>support@adventuregene.com</a></li>
-									<li><a href="tel:+008012345678"><i class="fal fa-phone-alt"></i>012 345 6789</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<!-- Start header top -->
-				</div>
-				<div class="navigation-area">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-2 col-sm-6 col-6">
-								<!-- Start site logo -->
-								<div class="site-logo">
-									<a href="index.html"><img src="{% static 'img/logo2.png' %}" alt="GENE"></a>
-								</div>
-								<!-- End site logo -->
-							</div>
-							<div class="col-lg-10 col-sm-6 col-6">
-								<!-- Start Navigation -->
-								<div class="main-menu-wrap">
-									<nav class="gene-nav">
-										<ul class="menu">
-											<li class="has-dropdown"><a href="javascript:void(0)">Home</a>
-												<ul><!-- Dropdown Items -->
-													<li><a href="index.html">Homepage V1</a></li>
-													<li><a href="index-2.html">Homepage V2</a></li>
-													<li><a href="index-3.html">Homepage V3</a></li>
-												</ul>
-											</li>
-                                                                                        <li class="has-dropdown"><a href="javascript:void(0)">Adventures</a>
-											    <ul><!-- Dropdown Items -->
-													<li><a href="adventure-1.html">Adventure List One</a></li>
-													<li><a href="adventure-2.html">Adventure List Two</a></li>
-													<li><a href="adventure-3.html">Adventure List Three</a></li>
-													<li><a href="adventure-detail-1.html">Adventure Details</a></li>
-												</ul>											
-											</li>
-											<li class="has-dropdown"><a href="javascript:void(0)">Blog</a>
-												<ul><!-- Dropdown Items -->
-													<li><a href="blog-1.html">Blog List One</a></li>
-												    <li><a href="blog-2.html">Blog List Two</a></li>
-												    <li><a href="blog-grid.html">Blog Grid</a></li>
-												    <li><a href="blog-details.html">Blog Details</a></li>
-												</ul>
-											</li>
-											<li class="has-dropdown"><a href="javascript:void(0)">Other Pages</a>
-											    <ul><!-- Dropdown Items -->
-                                                                                                    <li><a href="about.html">About Us</a> </li>
-                                                                                                    <li><a href="login.html">Log In</a> </li>
-                                                                                                    <li><a href="signup.html">Sign Up</a> </li>
-                                                                                                    <li><a href="404.html">Error</a> </li>
-												</ul>											
-											</li>
-											<li class="has-dropdown"><a href="javascript:void(0)">Cart Pages</a>
-											    <ul><!-- Dropdown Items -->
-												    <li><a href="cart.html">Cart</a></li>
-												    <li><a href="check-out.html">Check Out</a></li>	
-												</ul>											
-											</li>
-											<li><a href="contact.html">Contact</a></li>
-											<li class="icon"><a href="login.html"><i class="far fa-user"></i>LOGIN</a></li>
-											<li class="icon"><a href="cart.html"> <i class="fal fa-shopping-basket"></i><small>(2)</small></a></li>
-										</ul>
-									</nav> 
-								</div>
-								<!-- Mobile Menu Active here. Don't Remove it -->
-								<div class="mobile-menu-area"></div>
-								<!-- End Navigation -->
-							</div>
-						</div>
-					</div>
-				</div>
-			</header>
-			<!-- End Header -->
+{% block content %}
+
+{% include 'include/header.html' %}
+			
 			<!-- Start Slider Area -->
 			<section class="slider-area">
 				<div id="welcome-slide" class="slide-controls owl-carousel">
@@ -906,86 +756,7 @@
 			</div>
 			<!-- End Partner Area -->
 			<!-- Start Footer Area -->
-			<footer class="footer-area style-3 overlay-bg-4 pt-115">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-sm-6">
-							<!-- start contact widget -->
-							<div class="widget contact-widget">
-								<h3>About AdventureGene</h3>
-								<p>Adventure is all about having the freedom to follow your curiosity and discovering the unknown. No matter the Travel Style, our tours balance well-planned itineraries with the flexibility to do your own thing and explore a bit on your own.</p>
-								<ul>
-									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fab fa-instagram"></i></a></li>
-									<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-									<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-								</ul>
-							</div>
-							<!-- end contact widget -->
-						</div>
-						<div class="col-lg-2 col-sm-3">
-							<!-- start quick link widget -->
-							<div class="widget quick-link-widget">
-								<h3>Quick Links</h3>
-								<ul>
-									<li><a href="#"><i class="fal fa-angle-right"></i>About Us</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Why Travel With Us?</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Guides & Staff</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Contact Us</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>We Are Hiring</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Our Core Values</a></li>
-								</ul>
-							</div>
-							<!-- end quick link widget -->
-						</div>
-						<div class="col-lg-2 col-sm-3">
-							<!-- start quick link widget -->
-							<div class="widget quick-link-categories">
-								<h3>Categories</h3>
-								<ul>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Adventure</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Hiking & Trekking</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Cycling Tours</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Family Tours</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Wildlife Tours</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Polar Tours</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Food Tours</a></li>
-								</ul>
-							</div>
-							<!-- end quick link widget -->
-						</div>
-						<div class="col-lg-2 col-sm-4">
-							<!-- start quick link widget -->
-							<div class="widget quick-destinations">
-								<h3>Destinations</h3>
-								<ul>
-									<li><a href="#"><i class="fal fa-angle-right"></i>African Safaris</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Alaska & Canada</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>South America</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Middle East</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Asia</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>Europe</a></li>
-									<li><a href="#"><i class="fal fa-angle-right"></i>South America</a></li>
-								</ul>
-							</div>
-							<!-- end quick link widget -->
-						</div>
-						<div class="col-lg-3 col-sm-6">
-							<!-- start contact us widget -->
-							<div class="widget contact-us">
-								<h3>Contact Us</h3>
-								<ul>
-									<li><a href="#"><i class="fal fa-paper-plane"></i>Level 1, 14-16 Church Street Queenstown, New Zealand</a></li>
-									<li><a href="#"><i class="fal fa-envelope"></i>support@adventuregene.com</a></li>
-									<li><a href="#"><i class="fal fa-phone-alt"></i>+ 001 800 661 9073</a></li>
-								</ul>
-							</div>
-							<!-- end contact us widget -->
-						</div>
-					</div>
-				</div>
-			</footer>
+			
 			<!-- Start Copyright Area -->
 			<div class="copy-right-area style-2">
 				<div class="container">
@@ -1017,27 +788,6 @@
 		</div>
         <!-- End Wrapper -->
 		<!-- all js here -->
-		<!-- jquery latest version -->
-        <script src="{% static 'js/vendor/jquery-3.3.1.min.js' %}"></script>
-		<!-- bootstrap js -->
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>	
-        <!-- popper js -->
-        <script src="{% static 'js/popper.min.js' %}"></script>
-        <!-- owl carousel js -->
-        <script src="{% static 'js/owlcarousel.min.js' %}"></script>
-        <!-- meanmenu js -->
-        <script src="{% static 'js/meanmenu.min.js' %}"></script>
-        <!-- counterup js -->
-        <script src="{% static 'js/counterup.min.js' %}"></script>
-        <!-- scrollup js -->
-        <script src="{% static 'js/scrollup.min.js' %}"></script>
-        <!-- waypoints js -->
-        <script src="{% static 'js/waypoints.min.js' %}"></script>
-        <!-- imagesloaded js -->
-        <script src="{% static 'js/imagesloaded.pkgd.min.js' %}"></script>
-        <!-- Isotope js -->
-        <script src="{% static 'js/isotope.min.js' %}"></script>
-		<!-- main js -->
-        <script src="{% static 'js/main.js' %}"></script>
-    </body>
-</html>
+
+{% include 'include/footer.html' %}
+{% endblock %}
