--- a/templates/base/contact.html
+++ b/templates/base/contact.html
@@ -1,158 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Site Title -->
-        <title>Contact</title>
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="img/favicon.png" >
-		<!-- Bootstrap v5.0.2 css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- Animate css -->
-		<link rel="stylesheet" href="css/animate.min.css">
-		<!--====== Fontawesome ======-->
-        <link rel="stylesheet" href="fonts/fontawesome/css/fontawesome.all.min.css">
-		<!-- Owl carousel css -->
-		<link rel="stylesheet" href="css/owl-carousel.min.css">
-		<!-- Meanmenu css -->
-		<link rel="stylesheet" href="css/meanmenu.min.css">
-		<!-- cssanimation css -->
-		<link rel="stylesheet" href="css/cssanimation.min.css">
-		<!-- Default css -->
-		<link rel="stylesheet" href="css/default.css">
-		<!-- Style CSS -->
-		<link rel="stylesheet" href="css/style.css">
-		<!-- Responsive CSS -->
-        <link rel="stylesheet" href="css/responsive.css">
-</head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <!-- Start Preloader -->
-		<div class="preloader-wrap">
-			<div class="cube-wrapper">
-				<div class="cube-folding">
-					<span class="leaf1"></span>
-					<span class="leaf2"></span>
-					<span class="leaf3"></span>
-					<span class="leaf4"></span>
-				</div>
-				<span class="loading" data-name="Loading">Loading</span>
-			</div>
-		</div>
-		<!-- End Preloader -->
-		<!-- Start Wrapper -->
-		<div class="wrapper">
-			<!-- Start Header -->
-			<header id="header" class="header-area style-2 header-border absulate-header">
-				<div class="container">
-					<!-- Start header top -->
-					<div class="row">
-						<div class="col-lg-6 col-sm-3">
-							<div class="header-top-left">
-								<ul>
-									<li class="has-dropdown"><a href="#">USD</a>
-										<ul>
-											<li><a href="#">URO</a></li>
-											<li><a href="#">FJD</a></li>
-											<li><a href="#">GBP</a></li>
-										</ul>
-									</li>
-									<li class="has-dropdown"><a href="#">English</a>
-										<ul>
-											<li><a href="#">Arabic</a></li>
-											<li><a href="#">French</a></li>
-											<li><a href="#">Bangla</a></li>
-										</ul>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-lg-6 col-sm-9">
-							<!-- Header top contact -->
-							<div class="header-top-contact">
-								<ul>
-									<li><a href="mailto:yourname@email.com"><i class="fal fa-envelope"></i>support@adventuregene.com</a></li>
-									<li><a href="tel:+008012345678"><i class="fal fa-phone-alt"></i>012 345 6789</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<!-- Start header top -->
-				</div>
-				<div class="navigation-area">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-2 col-sm-6 col-6">
-								<!-- Start site logo -->
-								<div class="site-logo">
-									<a href="index.html"><img src="img/logo4.png" alt="GENE"></a>
-								</div>
-								<!-- End site logo -->
-							</div>
-							<div class="col-lg-10 col-sm-6 col-6">
-								<!-- Start Navigation -->
-								<div class="main-menu-wrap">
-									<nav class="gene-nav">
-										<ul class="menu">
-											<li class="has-dropdown"><a href="javascript:void(0)">Home</a>
-												<ul><!-- Dropdown Items -->
-													<li><a href="index.html">Homepage V1</a></li>
-													<li><a href="index-2.html">Homepage V2</a></li>
-													<li><a href="index-3.html">Homepage V3</a></li>
-												</ul>
-											</li>
-                                                                                        <li class="has-dropdown"><a href="javascript:void(0)">Adventures</a>
-											    <ul><!-- Dropdown Items -->
-													<li><a href="adventure-1.html">Adventure List One</a></li>
-													<li><a href="adventure-2.html">Adventure List Two</a></li>
-													<li><a href="adventure-3.html">Adventure List Three</a></li>
-													<li><a href="adventure-detail-1.html">Adventure Details</a></li>
-												</ul>											
-											</li>
-                                                                                        <li class="has-dropdown"><a href="javascript:void(0)">Blog</a>
-											    <ul><!-- Dropdown Items -->
-												    <li><a href="blog-1.html">Blog List One</a></li>
-												    <li><a href="blog-2.html">Blog List Two</a></li>
-												    <li><a href="blog-grid.html">Blog Grid</a></li>
-												    <li><a href="blog-details.html">Blog Details</a></li>
-												</ul>											
-											</li>
-											<li class="has-dropdown"><a href="javascript:void(0)">Other Pages</a>
-											    <ul><!-- Dropdown Items -->
-                                                                                                    <li><a href="about.html">About Us</a> </li>
-                                                                                                    <li><a href="login.html">Log In</a> </li>
-                                                                                                    <li><a href="signup.html">Sign Up</a> </li>
-                                                                                                    <li><a href="404.html">Error</a> </li>
-											</ul>	
-											</li>
-                                                                                        <li class="has-dropdown"><a href="javascript:void(0)">Cart Pages</a>
-											    <ul><!-- Dropdown Items -->
-												    <li><a href="cart.html">Cart</a></li>
-												    <li><a href="check-out.html">Check Out</a></li>	
-												</ul>	
-											</li>
-											<li><a href="contact.html">Contact</a></li>
-											<li class="icon"><a href="login.html"><i class="far fa-user"></i>LOGIN</a></li>
-											<li class="icon"><a href="cart.html"> <i class="fal fa-shopping-basket"></i><small>(2)</small></a></li>
-										</ul>
-									</nav> 
-								</div>
-								<!-- Mobile Menu Active here. Don't Remove it -->
-								<div class="mobile-menu-area"></div>
-								<!-- End Navigation -->
-							</div>
-						</div>
-					</div>
-				</div>
-			</header>
-			<!-- End Header -->
+{% extends 'homepage.html' %}
+{% load static %}
+{% block content %}
+
+{% include 'include/header.html' %}
 			<!-- Start Bradcumb Area -->
 			<div class="bradcumb-area style-1 overlay-bg-4">
 				<div class="container">
@@ -269,27 +119,28 @@
 							</div>
 							<!-- End section title -->
 							<div class="contact-p-contact pb-70">
-								<form action="#" class="gane-form">
+								<form method="POST" action="{% url 'contact' %}" class="gane-form">
+									{% csrf_token %}
 									<!-- Start Single Field -->
 									<div class="single-field half-field">
-										<input type="text" class="form-control" id="usr" placeholder="First Name">
+										<input type="text" name="name" class="form-control" id="usr" placeholder="Как к вам обращаться?">
 									</div>
 									<!-- End Single Field -->
 									<!-- Start Single Field -->
 									<div class="single-field half-field-last">
-										<input type="text" class="form-control" id="usr" placeholder="Last Name">
+										<input type="number" name="number" class="form-control" id="usr" placeholder="Номер телефона">
 									</div>
 									<!-- Start Single Field -->
 									<div class="single-field half-field">
-										<input type="email" class="form-control" id="usr" placeholder="Your Email">
+										<input type="email" name="email" class="form-control" id="usr" placeholder="Email">
 									</div>
 									<!-- End Single Field -->
 									<!-- Start Single Field -->
 									<div class="single-field half-field-last">
-										<input type="tel" class="form-control" id="usr" placeholder="Last Name">
+										<input type="tel" name="cause" class="form-control" id="usr" placeholder="Причина заявки">
 									</div>
 									<div class="single-field">
-										<textarea class="form-control" rows="5" id="comment" placeholder="Enter your message"></textarea>
+										<textarea name="message" class="form-control" rows="5" id="comment" placeholder="Enter your message"></textarea>
 									</div>
 									<button class="btn btn-theme" type="submit">Send Message</button> 
 									<!-- End field left -->
@@ -390,26 +241,7 @@
 		</div>
         <!-- End Wrapper -->
 		<!-- all js here -->
-		<!-- jquery latest version -->
-        <script src="js/vendor/jquery-3.3.1.min.js"></script>
-		<!-- bootstrap js -->
-        <script src="js/bootstrap.min.js"></script>	
-        <!-- popper js -->
-        <script src="js/popper.min.js"></script>
-        <!-- owl carousel js -->
-        <script src="js/owlcarousel.min.js"></script>
-        <!-- meanmenu js -->
-        <script src="js/meanmenu.min.js"></script>
-        <!-- counterup js -->
-        <script src="js/counterup.min.js"></script>
-        <!-- scrollup js -->
-        <script src="js/scrollup.min.js"></script>
-        <!-- waypoints js -->
-        <script src="js/waypoints.min.js"></script>
-        <!-- imagesloaded js -->
-        <script src="js/imagesloaded.pkgd.min.js"></script>
-        <!-- Isotope js -->
-        <script src="js/isotope.min.js"></script>
+
         <!-- Google Map js -->   
        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
            <script type="text/javascript">
@@ -437,6 +269,5 @@
              google.maps.event.addDomListener(window, 'load', initialize);
            </script>
 		<!-- main js -->
-        <script src="js/main.js"></script>
-    </body>
-</html>
+		{% include 'include/footer.html' %}
+		{% endblock %}
