--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!-- Start Header -->
 <header id="header" class="header-area style-2 header-border absulate-header">
     <div class="container">
@@ -41,7 +42,7 @@
                 <div class="col-lg-2 col-sm-6 col-6">
                     <!-- Start site logo -->
                     <div class="site-logo">
-                        <a href="{% url 'index' %}"><img src="img/logo4.png" alt="GENE"></a>
+                        <a href="{% url 'index' %}"><img src="{% static 'img/logo4.png' %}" alt="GENE"></a>
                     </div>
                     <!-- End site logo -->
                 </div>
